--- a/css/friend.css
+++ b/css/friend.css
@@ -43,3 +43,14 @@ friend__bottom-text :: chat.html에만 적용*/
 .friend .chat__timestamp {
     font-size:12px;
 }
+
+.friend .friend__now-listening{
+    border : 2px solid #52e084;
+    padding:5px 10px;
+    border-radius:15px;
+    font-size:14px;
+}
+
+.friend__now-listening span {
+    opacity:0.7;
+}
