--- a/css/chat.css
+++ b/css/chat.css
@@ -1,11 +1,11 @@
-.chats-body{
+/* .chats-body{
     padding:0;
 }
 .chats-body .header,
 .chats-body .status-bar{
     padding:0, 20px;
-}
-.chat{
+} */
+.chat-screen{
     background-image: url('../imgs/chatBg.png');
     min-height: 100vh;
 }
@@ -40,3 +40,63 @@
 .chat__write-column input:focus{
     outline:none;
 }
+.chat-screen .chat__messages{
+    border-top: 1px solid #f7f7f7;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    padding : 0 20px;
+    padding-top:30px;
+}
+.chat__messages .chat__timestamp{
+    background-color:whitesmoke;
+    font-size:12px;
+    padding:5px 10px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+    text-transform:uppercase;
+    font-weight:700;
+}
+.message {
+    display: flex;
+    align-items: flex-start;
+    width:50%;
+    margin-bottom:20px;
+}
+.message .message__content{
+    width:80%;
+}
+.incoming-message{
+    align-self : flex-start;
+}
+.sent-message{
+    align-self: flex-end;
+}
+.incoming-message img{
+    width:30px;
+    border-radius:15px;
+    margin-right:15px;
+
+}
+.message .message_bubble {
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+      0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+    padding: 10px 20px;
+    border-radius: 20px;
+  }
+ .incoming-message .mesaage__author{
+     margin-bottom:10px;
+     display:block;
+     font-weight:700;
+     font-size: 14px;
+ }
+ .incoming-message .message_bubble{
+    background-color: rgb(170, 224, 245);
+     border-bottom-left-radius: 0px;
+ }
+ .sent-message .message_bubble{
+     background-color: rgb(205, 248, 126);
+     border-bottom-right-radius:0px;
+ }
