--- a/css/chat.css
+++ b/css/chat.css
@@ -1,11 +1,25 @@
-.chat-screen{
-    background-image: url('../imgs/chatBg.png');
-    min-height: 100vh;
-}
-.chat__write{
+.header-wrapper{
     position:fixed;
-    bottom:50px;
-    width: 80%;
+    top:0;
+    width:100%;
+    padding:5px 0;
+    background-color:white;
+}
+.chats-body{
+    padding:10px 0;
+    padding-top:100px;
+}
+.chats-body .header,
+.chats-body .status-bar{
+    padding:0 20px;
+}
+.chats-body{
+    background-image: url('../imgs/chatBg.png');
+    min-height: 200vh;
+}
+.chat__write-container{
+    position:fixed;
+    bottom:0;
     display:flex;
     justify-content: space-between;
     align-items: center;
@@ -14,9 +28,35 @@
     right:0;
     background-color:#fcfcfc;
     padding: 0 20px;
-    border-radius:40px;
-    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+    /* box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025); */
+}
+
+.chat__write{
+    bottom:0px;
+    width:100%;
+    border-radius:0;
+    padding : 20px 60px;
+    width:100%;
+    border:none;
+    font-size:14px;
+}
+.chat__icon-left{
+    position:absolute;
+}
+.chat__icon-right{
+    position:absolute;
+    right:10px;
+}
+.chat__write:focus{
+    outline:none;
+}
+.chat__icon{
+    font-size:18px;
+    transition:opacity .3s ease-in-out;
+}
+.chat__write:focus ~ .chat__icon{
+    opacity:0;
 }
 .chat__write i{
     font-size:22px;
@@ -31,9 +71,6 @@
     border:none;
     font-size:14px;
 } 
-.chat__write-column input:focus{
-    outline:none;
-}
 .chat-screen .chat__messages{
     border-top: 1px solid #f7f7f7;
     display:flex;
