--- a/css/chat.css
+++ b/css/chat.css
@@ -23,16 +23,38 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    margin:0 auto;
     left:0;
     right:0;
-    background-color:#fcfcfc;
-    padding: 0 20px;
-    /* box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025); */
+    width:100%;
 }
-
+.chat__icon-left{
+    position:absolute;
+    left:10px;
+}
+.chat__icon-right{
+    position:absolute;
+    right:10px;
+}
+/*remove annotation */
+@keyframes float{
+    0%{
+        /* transform: translateY(-100px); */
+        box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+        0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+    }
+    50%{
+        /* transform: translateY(-110px); */
+        box-shadow: 0 30px 60px -60px rgba(50, 50, 93, 0.25),
+        0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+    }
+    100%{
+        /* transform: translateY(-100px); */
+        box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+        0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+    }
+}
 .chat__write{
+    margin: 0 auto;
     bottom:0px;
     width:100%;
     border-radius:0;
@@ -40,16 +62,17 @@
     width:100%;
     border:none;
     font-size:14px;
-}
-.chat__icon-left{
-    position:absolute;
-}
-.chat__icon-right{
-    position:absolute;
-    right:10px;
+    transition: width .5s ease-in-out, border-radius .5s ease-in-out,
+    box-shadow 0.5s ease-in-out, transform .5s ease-in-out;
 }
 .chat__write:focus{
     outline:none;
+    width:80%;
+    transform:translateY(-100px);
+    border-radius:40px;
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+    animation: float 3s linear infinite forwards;
 }
 .chat__icon{
     font-size:18px;
