--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -33,3 +33,16 @@
     justify-content: center;
     border-radius: 50%;
 }
+@keyframes showNavBar{
+    from{
+        transform: translateY(80px);
+    }
+    to{
+        transform: none;
+    }
+}
+.nav{
+    transform: translateY(80px); /*hidden before load*/
+    animation: showNavBar .5s ease-out forwards;
+    animation-delay: .5s;
+}
