--- a/css/chat.css
+++ b/css/chat.css
@@ -6,6 +6,9 @@
     padding:5px 0;
     background-color:white;
 }
+.chats .chats__list{
+    margin-bottom:10px;
+}
 .chats-body{
     padding:10px 0;
     padding-top:100px;
